Fixed wrap on buttons

--- a/assets/scss/_theme-elements.scss
+++ b/assets/scss/_theme-elements.scss
@@ -77,6 +77,7 @@
     font-weight: 800;
     height: 3.8em;
     line-height: 3.8em;
+    white-space: nowrap;
     margin: auto;
     padding: 0 1.7em;
     -moz-transition: background-color 0.2s ease, border 0.2s ease, color 0.2s ease;
